samples/_failures_safe/1761258369_7b6bbb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a359ac0b.c: In function ‘main’:
./samples/SAFE/__tmp_a359ac0b.c:170:5: error: expected ‘,’ or ‘;’ at end of input
  170 |     int b = graph_add_node
      |     ^~~
./samples/SAFE/__tmp_a359ac0b.c:170:5: error: expected declaration or statement at end of input
